ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sprout-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: sprout.connect
    http:
      paths:
      - path: /sprout(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: sprout.connect.backend
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 8080
